<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>navatics_can_interface</name>
  <version>0.0.0</version>
  <description>Interface to CAN Bus via USART for Navatics ROV</description>
  <maintainer email="henry.liyanto@navatics.com">Henry Liyanto</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>navatics_msgs</build_depend>
  <build_depend>serial</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>navatics_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

